[gd_scene load_steps=10 format=3 uid="uid://d2wp31eiupiqu"]

[ext_resource type="Script" uid="uid://raqcu4w6jowm" path="res://scenes/levels/level_1.gd" id="1_bfxgj"]
[ext_resource type="Texture2D" uid="uid://cghr181t2uujb" path="res://images/castle-corridor.jpg" id="2_dywbp"]
[ext_resource type="PackedScene" uid="uid://d06eup4nchehj" path="res://scenes/characters/mysterious_man.tscn" id="3_1seuy"]
[ext_resource type="PackedScene" uid="uid://s13eh812jvlv" path="res://scenes/objects/dialog_textbox.tscn" id="4_2r1tl"]
[ext_resource type="PackedScene" uid="uid://bu6400adu5ahr" path="res://scenes/objects/portal.tscn" id="4_dywbp"]
[ext_resource type="AudioStream" uid="uid://b7nkm2rsyc65m" path="res://audio/portal.mp3" id="6_1seuy"]

[sub_resource type="Animation" id="Animation_2r1tl"]
length = 0.001

[sub_resource type="Animation" id="Animation_1seuy"]
resource_name = "portal_animations"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(988, 450), Vector2(988, 325)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8a7m2"]
_data = {
&"RESET": SubResource("Animation_2r1tl"),
&"portal_animations": SubResource("Animation_1seuy")
}

[node name="Level1" type="Node2D"]
script = ExtResource("1_bfxgj")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(638, 358)
scale = Vector2(1.79645, 1.79645)
texture = ExtResource("2_dywbp")
metadata/_edit_lock_ = true

[node name="MysteriousMan" parent="." instance=ExtResource("3_1seuy")]
position = Vector2(638, 478)
scale = Vector2(2, 2)

[node name="Portal" parent="." instance=ExtResource("4_dywbp")]
modulate = Color(1, 1, 1, 0)
position = Vector2(988, 450)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Portal"]
libraries = {
&"": SubResource("AnimationLibrary_8a7m2")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Dialogue" parent="CanvasLayer" instance=ExtResource("4_2r1tl")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -176.0
offset_right = 320.0
grow_horizontal = 2
grow_vertical = 0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_1seuy")
volume_db = 10.0

[connection signal="input_event" from="MysteriousMan" to="." method="_on_mysterious_man_input_event"]
[connection signal="input_event" from="Portal" to="." method="_on_portal_input_event"]
[connection signal="dialogue_finished" from="CanvasLayer/Dialogue" to="." method="_on_dialogue_dialogue_finished"]
